# text-embeddings-inference

./: Cargo.toml  Dockerfile-black
backends/candle/: Cargo.toml
backends/candle/src/: compute_cap.rs  lib.rs
router/: Cargo.toml
