[workspace]
members = [
    "backends",
    "backends/candle",
    "backends/ort",
    "backends/core",
    "backends/python",
    "backends/grpc-client",
    "core",
    "router",
]
default-members = [
    "backends",
    "backends/candle",
    "backends/ort",
    "backends/core",
    "backends/python",
    "backends/grpc-client",
    "core",
    "router",
]
resolver = "2"

[workspace.package]
version = "1.8.2"
edition = "2021"
authors = ["Olivier Dehaene", "Nicolas Patry", "Alvaro Bartolome"]
homepage = "https://github.com/huggingface/text-embeddings-inference"

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.1", features = ["derive", "env"] }
hf-hub = { version = "0.4", features = ["tokio"], default-features = false }
metrics = "0.23"
nohash-hasher = "0.2"
num_cpus = "1.16.0"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig", "esaxx_fast"] }
tokio = { version = "1.25", features = ["rt", "rt-multi-thread", "parking_lot", "sync", "signal"] }
tracing = "0.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.9"
serial_test = "2.0.0"
cudarc = { version = "0.17.3", features = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "f8",
    "cuda-version-from-build-system",
    "dynamic-loading"
], default-features = false }
intel-mkl-src = { version = "0.8", default-features = false }
candle = { version = "0.9.1", package = "candle-core" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
candle-flash-attn = { version = "0.9.1" }
candle-cublaslt = { version = "0.0.1" }
candle-layer-norm = { version = "0.0.1" }
candle-rotary = { version = "0.0.1" }
candle-flash-attn-v1 = { version = "0.0.1" }
half = { version = "2.3.1", features = ["num-traits"] }

[patch.crates-io]
candle = { git = "https://github.com/huggingface/candle", rev = "dd1246771a23e7cab44cdac07e381b8c1880b289", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "dd1246771a23e7cab44cdac07e381b8c1880b289", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "dd1246771a23e7cab44cdac07e381b8c1880b289", package = "candle-transformers" }
candle-flash-attn = { git = "https://github.com/huggingface/candle", rev = "dd1246771a23e7cab44cdac07e381b8c1880b289", package = "candle-flash-attn" }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = 1
lto = "thin"
codegen-units = 16
strip = "none"
